# jeu_de_la_vie

./: .gitignore  Cargo.toml  README.md
open-sans/: README.md
src/: main.rs
src/cellule/: map.rs
src/os_info/: mod.rs  name_os.rs  path.rs
src/view/: board_button.rs  mod.rs  monde.rs  sdl_init.rs  text.rs  window.rs
