[package]
name = "jeu_de_la_vie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
os_info = "3.7.0"
rand = "0.5.5"

[dependencies.sdl2]
sdl2 = "0.35.2"
default-features = false
features = ["ttf", "image"]
